# TextParseCpp

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  codecov.yml
examples/: CMakeLists.txt  simple_parser.cpp
include/: CombinedParserCore.hpp  Function.hpp  FunctionImpl.hpp  MatchBuilder.hpp  Matcher.hpp  Meta.hpp  Parser.hpp  ParserBuilder.hpp  ParserCore.hpp  SelectionContainer.hpp  Text.hpp
include/parser/: parser.hpp  parser_builder.hpp
include/parser/detail/: combined_parser_core.hpp  parser_core.hpp  selection_container.hpp
include/parser/utility/: function.hpp  function_impl.hpp  meta.hpp  text.hpp
src/: Matcher.hpp  Text.cpp  Text.h
test/: CMakeLists.txt  CombinedParserTest.cpp  FunctionTest.cpp  InvokeTest.cpp  MatcherTest.cpp  ParserTest.cpp  TextTest.cpp  combined_parser_test.cpp  function_test.cpp  invoke_test.cpp  main.cpp  parser_test.cpp  text_test.cpp
